<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- champ nom et statut  -->
    <string name="user_string">Catherine EHOUMAN</string>
    <string name="status_string">Visiteur</string>
    <!-- champ icon enter -->
    <string name="icon_enter">Visite</string>
    <string name="icon_enter_01">Motif de la venue</string>
    <!-- champ icon card-->
    <string name="icon_passe">Passeport</string>
    <string name="icon_passe_01">Pièce d\'identité montree</string>
    <!--  champ icon people -->
    <string name="icon_people">1 Adulte</string>
    <string name="icon_people_01">Nombre de personnes entrées</string>
    <!--  -->
    <string name="_12_30_string">12:30</string>
    <!--champ icon building-->
    <string name="icon_building">Groupe Seignerie</string>
    <string name="icon_building_01">Nom de l\'Entreprise</string>
    <!--champ Sign In-->
    <string name="full_name_string">Nom d utilisateur</string>
    <string name="continue_string">Se Connecter</string>
    <string name="email_string"> Email, nom d utilisateur </string>
    <string name="password_string"> Mot de passe </string>
    <string name="sign_title_string"> SmartChecking </string>
    <string name="sign_title_1_string"> Snap-Clic-Enregistré ! </string>
    <string name="create_an_account_string"> Je me connecte </string>
    <string name="politique_string"> En vous connectant vous acceptez les termes et politiques de vie privée </string>
    <!-- accueil_ strings -->
    <string name="lucy_kun_string">Lucy Kun</string>
    <string name="invit__string">Invit</string>
    <string name="passeport_string">Passeport</string>
    <string name="scan_id_string">Scan ID</string>
    <string name="entr_e_string">Entre</string>
    <string name="sortie_string">Sortie</string>
    <string name="_11___00_string">11 : 00</string>
    <string name="_12___10_string">12 : 10</string>
    <string name="motif___r_union_string">Motif : Runion</string>
    <string name="lisa_marlow_string">Lisa MARLOW</string>
    <string name="employ__string">Employ</string>
    <string name="cni_string">CNI</string>
    <string name="scan_id_ek1_string">Scan ID</string>
    <string name="entr_e_ek1_string">Entre</string>
    <string name="sortie_ek1_string">Sortie</string>
    <string name="_11___00_ek1_string">11 : 00</string>
    <string name="_12___10_ek1_string">12 : 10</string>
    <string name="motif___travail_string">Motif : Travail</string>
    <string name="nom">KOUASSI</string>
    <string name="prenom">Alfred</string>
    <string name="visiteur_string">Visiteur</string>
    <string name="id_string">Pas d ID</string>
    <string name="enter_string">Entrer :</string>
    <string name="manuel_string">Manuel</string>
    <string name="come_string">Entrer</string>
    <string name="out_string">Sortie</string>
    <string name="come_time">11 : 00</string>
    <string name="out_time">12 : 10</string>
    <string name="motif">Motif :</string>
    <string name="visite_string">Visite</string>
    <string name="sandra_marilyn_smith_string">Sandra Marilyn SMITH</string>
    <string name="no_id_string">Pas dID</string>
    <string name="entr_e_manuel_ek1_string">Entre manuel</string>
    <string name="entr_e_ek3_string">Entre</string>
    <string name="sortie_ek3_string">Sortie</string>
    <string name="_11___00_ek3_string">11 : 00</string>
    <string name="_12___10_ek3_string">12 : 10</string>
    <string name="motif___visite_ek1_string">Motif : Visite</string>
    <string name="josh_egmond_string">Josh EGMOND</string>
    <string name="visiteur_ek2_string">Visiteur</string>
    <string name="pas_d_id_ek2_string">Pas d\'ID</string>
    <string name="entr_e_manuel_ek2_string">Entre manuel</string>
    <string name="entr_e_ek4_string">Entre</string>
    <string name="sortie_ek4_string">Sortie</string>
    <string name="_11___00_ek4_string">11 : 00</string>
    <string name="_12___10_ek4_string">12 : 10</string>
    <string name="motif___visite_ek2_string">Motif : Visite</string>

    <string name="smartchecking_ek2_string">SmartChecking</string>
    <string name="select_string">Sélectionner</string>
    <string name="disconnect_string">Se déconnecter</string>
    <!-- settings strings -->
    <string name="settings_string">Profil et Paramètres</string>
    <string name="user_set_string">KASSI Koffi</string>
    <string name="statut_set_string">Vigile</string>
    <string name="edit_string">Modifier</string>
    <string name="notifications_string">Notifications</string>
    <string name="general_string">Général</string>
    <string name="account_string">Mon compte </string>
    <string name="help_string">A propos</string>
    <!-- Enregister-->
    <string name="nom_string">Nom</string>
    <string name="prenom_string">Prénoms</string>
    <string name="mail_string">Email</string>
    <string name="num_string">Numero</string>
    <string name="create_account_string">Enregistrer une visite </string>
    <string name="sexe_string">Sexe</string>
    <string name="motif_string">Motif de la visite</string>
    <string name="carte_string">Type de Carte</string>
    <string name="annuler_string">Annuler</string>
    <string name="confirmer_string">Confirmer</string>
    <string name="valider_string">Valider</string>
    <string name="Annuler_string">Annuler</string>
    <string name="select_users_string">Êtes vous sûr de vouloir supprimer cet utilisateur ? vous ne pourrez plus revenir en arrière. Êtes vous sur ?</string>
    <string name="select_titre_string">Suppression enregistrement</string>
    <string name="select_retour">Retour</string>
    <string name="select_conf">Confirmer</string>
    <string name="csv">Vous êtes sur le point d\'exporter l\'utilisateur en fichier .csv. Êtes-vous sur de vouloir continuer ?</string>
    <string name="csv_title">Exportation en .csv</string>
    <string name="csv_off">Retour</string>
    <string name="csv_on">Confirmer</string>
    <string name="csv_02">Votre fichier a bien été exporté.Veuillez consulter votre dossier de téléchargement pour le voir. </string>
    <string name="csv_off_02">Retour</string>
    <string name="date_livr">Date de Livraison </string>
    <string name="date_expir">Date d\'expiration </string>
    <string name="nbr_visitor">Nombre de Visiteur </string>
    <string name="scan_visitor">Scan du visiteur </string>
    <string name="enreg_valid">Le visiteur a bien été enregistré ! </string>
    <string name="enreg_valid_back">Retour </string>
    <!--    <string name="onboarding">C\'est une application éditée par le Groupe CERCO Côte d\'Ivoire, permettant de scanner les pièces d\'identité (CNI, Passeport, Permis de conduire et Cartes d\'étudiants) afin de mieux enregistrer les visiteurs et membres d'une organisation, mettant ainsi fin aux registres papiers et la charge pénible qui l'accompagne. </string>-->
    <string name="copyright">Copyright, Groupe CERCO  CI Propriété Privée, Tous Droits Réservés</string>
    <string name="select">Sélectionner tout</string>
    <string name="annuler">Annuler </string>
    <string name="allselect">Tout séléctionner </string>
    <string name="tselect">Sélectionner tout </string>
    <string name="exportcsv">Exporter en .csv </string>
    <string name="exportpdf">Exporter en .pdf </string>
    <string name="delete">Supprimer </string>
    <string name="back">Back </string>
    <string name="nodata">No Data Found</string>
    <string name="zero">O</string>

    <string name="search_string">Rechercher un nom, numero d\'ID, etc…</string>
    <string name="search_hint">Rechercher un nom, numero d\'ID, etc…</string>
    <string name="update">Modification</string>
    <string name="save">Enregistrer une visite </string>


</resources>