<!-- recycler_item_layout.xml -->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:gravity="center"
	android:paddingBottom="10dp"
	android:paddingTop="10dp"
	>
	<CheckBox
		android:id="@+id/checkbox"
		android:layout_width="50dp"
		android:layout_height="50dp" />
	<RelativeLayout
		android:id="@+id/one"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="-5dp"
		android:layout_toEndOf="@+id/checkbox"
		android:background="@drawable/user_bloc_1_shape"
		android:elevation="2dp"
		android:padding="5dp">

		<ImageView
			android:id="@+id/user_profile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:src="@drawable/user_profile" />
		<!--        Profile Nom et Prenom  -->
		<TextView

			android:id="@+id/user_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@+id/user_profile"
			android:text="@string/alfred_kouassi_string"
			android:textColor="@color/green_sombre"
			android:textSize="16sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/user_statut"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/user_name"
			android:layout_toEndOf="@+id/user_profile"
			android:text="@string/visiteur_string"
			android:textColor="@color/color_green"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/user_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/user_statut"
			android:layout_toEndOf="@+id/user_profile"
			android:text="@string/enter_string"
			android:textColor="@color/color_gris"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/user_t_manuel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/user_statut"
			android:layout_marginStart="@dimen/T5"
			android:layout_toEndOf="@+id/user_type"
			android:text="@string/manuel_string"
			android:textColor="@color/color_gris"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/user_motif"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/user_type"
			android:layout_toEndOf="@+id/user_profile"
			android:text="@string/motif"
			android:textColor="@color/color_gris"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/motif"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/user_type"
			android:layout_marginStart="@dimen/T5"
			android:layout_toEndOf="@+id/user_motif"
			android:text="@string/visite_string"
			android:textColor="@color/color_gris"
			android:textSize="14sp" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/checkbox"
		android:layout_below="@+id/one"
		android:layout_alignParentEnd="true"
		android:layout_marginStart="25dp"
		android:layout_marginTop="-10dp"
		android:layout_marginEnd="-5dp"
		android:background="@drawable/bloc"
		android:paddingStart="10dp"
		android:paddingTop="10dp"
		android:paddingEnd="10dp">

		<TextView
			android:id="@+id/user_id"
			android:layout_width="50dp"
			android:layout_height="25dp"
			android:layout_alignParentStart="true"
			android:text="@string/id_string"
			android:textColor="@color/color_gris"
			android:textSize="11sp"
			android:textStyle="bold" />

		<ImageView
			android:id="@+id/icon_vert"
			android:layout_width="25dp"
			android:layout_height="25dp"
			android:layout_marginStart="@dimen/T15"
			android:layout_toEndOf="@+id/user_id"
			android:src="@drawable/i_metro_enter" />

		<TextView
			android:id="@+id/green_time"
			android:layout_width="wrap_content"
			android:layout_height="25dp"
			android:layout_marginStart="@dimen/T15"
			android:layout_toEndOf="@+id/icon_vert"
			android:text="@string/come_time"
			android:textColor="@color/green_sombre" />
		<!--        icon sortie  -->
		<ImageView
			android:id="@+id/icon_rouge"
			android:layout_width="25dp"
			android:layout_height="25dp"
			android:layout_marginStart="@dimen/T15"
			android:layout_toEndOf="@+id/green_time"
			android:src="@drawable/i_metro_exit" />
		<!--        heure sortie -->
		<TextView
			android:id="@+id/red_time"
			android:layout_width="wrap_content"
			android:layout_height="25dp"
			android:layout_marginStart="@dimen/T15"
			android:layout_toEndOf="@+id/icon_rouge"
			android:text="@string/out_time"
			android:textColor="@color/green_sombre" />

		<TextView
			android:id="@+id/user_entre"
			android:layout_width="40dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/icon_vert"
			android:layout_alignParentStart="true"
			android:layout_marginStart="60dp"
			android:layout_marginTop="3dp"
			android:text="@string/come_string"
			android:textColor="@color/color_gris" />

		<TextView
			android:id="@+id/user_sortie"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/icon_rouge"
			android:layout_marginStart="55dp"
			android:layout_toEndOf="@+id/user_entre"
			android:text="@string/out_string"
			android:textColor="@color/color_gris" />
	</RelativeLayout>
</RelativeLayout>
