<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/T50"
        android:layout_marginEnd="@dimen/T50"
        android:background="@drawable/box"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/T50"
        android:paddingBottom="@dimen/T50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_titre_string"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/T15"
            android:text="@string/select_users_string"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/T10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_retour"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/T40"
                android:text="@string/select_conf"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>