<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:layout_gravity="center"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/T50"
        android:layout_marginEnd="@dimen/T50"
        android:background="@drawable/box"
        android:padding="@dimen/T10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/T10"
                android:layout_marginEnd="30dp"
                android:text="@string/csv_title"
                android:textColor="@color/color_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/T10"
                android:layout_marginEnd="30dp"
                android:textSize="15sp"
                android:text="@string/csv" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/T10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/retour_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csv_off"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmer_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/T40"
                    android:text="@string/csv_on"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>