<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	android:id="@+id/box1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="25dp"
	app:cardCornerRadius="10dp">
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/box2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp">

		<ImageView
			android:id="@+id/user_parameter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_parametre"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_margin="15dp" />

		<ImageView
			android:id="@+id/user_profile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/user_profile"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/user_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:text="@string/alfred_kouassi_string"
			android:textColor="@color/green_sombre"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/user_profile"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/user_statut"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:text="@string/visiteur_string"
			android:textColor="@color/color_green"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/user_profile"
			app:layout_constraintTop_toBottomOf="@+id/user_name" />

		<TextView
			android:id="@+id/user_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:text="@string/enter_string"
			android:textColor="@color/color_gris"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintStart_toEndOf="@+id/user_profile"
			app:layout_constraintTop_toBottomOf="@+id/user_statut" />

		<TextView
			android:id="@+id/user_t_manuel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:text="@string/manuel_string"
			android:textColor="@color/color_gris"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="@+id/user_type"
			app:layout_constraintStart_toEndOf="@+id/user_type"
			app:layout_constraintTop_toTopOf="@+id/user_type" />

		<TextView
			android:id="@+id/user_motif"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/motif"
			android:textColor="@color/color_gris"
			android:textSize="14sp"
			android:textStyle="bold"
			android:layout_marginStart="4dp"
			app:layout_constraintStart_toEndOf="@+id/user_profile"
			app:layout_constraintTop_toBottomOf="@+id/user_type" />

		<TextView
			android:id="@+id/motif"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/visite_string"
			android:textColor="@color/color_gris"
			android:textSize="12sp"
			android:layout_marginStart="4dp"
			app:layout_constraintBottom_toBottomOf="@+id/user_motif"
			app:layout_constraintStart_toEndOf="@+id/user_motif"
			app:layout_constraintTop_toTopOf="@+id/user_motif" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


